@@ -35,105 +35,105 @@ import java.lang.reflect.Method;
 import java.lang.reflect.Modifier;
 
 public class MockCreator {
-	
-	@SuppressWarnings("unchecked")
-	public static <T> T mock(Class<T> type, boolean isStatic, boolean isSpy, Object delegator,
-			MockSettings mockSettings, Method... methods) {
-		if (type == null) {
-			throw new IllegalArgumentException("The class to mock cannot be null");
-		}
 
-		T mock = null;
-		final String mockName = toInstanceName(type);
+    @SuppressWarnings("unchecked")
+    public static <T> T mock(Class<T> type, boolean isStatic, boolean isSpy, Object delegator,
+                             MockSettings mockSettings, Method... methods) {
+        if (type == null) {
+            throw new IllegalArgumentException("The class to mock cannot be null");
+        }
+
+        T mock = null;
+        final String mockName = toInstanceName(type);
 
         MockRepository.addAfterMethodRunner(new MockitoStateCleaner());
 
-		final Class<T> typeToMock;
-		if (isFinalJavaSystemClass(type)) {
-			typeToMock = (Class<T>) new ClassReplicaCreator().createClassReplica(type);
-		} else {
-			typeToMock = type;
-		}
+        final Class<T> typeToMock;
+        if (isFinalJavaSystemClass(type)) {
+            typeToMock = (Class<T>) new ClassReplicaCreator().createClassReplica(type);
+        } else {
+            typeToMock = type;
+        }
 
-		final MockData<T> mockData = createMethodInvocationControl(mockName, typeToMock, methods, isSpy, (T) delegator,
-				mockSettings);
+        final MockData<T> mockData = createMethodInvocationControl(mockName, typeToMock, methods, isSpy, (T) delegator,
+                mockSettings);
 
-		mock = mockData.getMock();
-		if (isFinalJavaSystemClass(type) && !isStatic) {
-			mock = Whitebox.newInstance(type);
-			DefaultFieldValueGenerator.fillWithDefaultValues(mock);
-		}
+        mock = mockData.getMock();
+        if (isFinalJavaSystemClass(type) && !isStatic) {
+            mock = Whitebox.newInstance(type);
+            DefaultFieldValueGenerator.fillWithDefaultValues(mock);
+        }
 
-		if (isStatic) {
-			MockRepository.putStaticMethodInvocationControl(type, mockData.getMethodInvocationControl());
-		} else {
-			MockRepository.putInstanceMethodInvocationControl(mock, mockData.getMethodInvocationControl());
-		}
+        if (isStatic) {
+            MockRepository.putStaticMethodInvocationControl(type, mockData.getMethodInvocationControl());
+        } else {
+            MockRepository.putInstanceMethodInvocationControl(mock, mockData.getMethodInvocationControl());
+        }
 
-		if (isSpy) {
-			new LenientCopyTool().copyToMock(delegator, mock);
-		}
+        if (isSpy) {
+            new LenientCopyTool().copyToMock(delegator, mock);
+        }
 
-		return mock;
-	}
+        return mock;
+    }
 
-	private static <T> boolean isFinalJavaSystemClass(Class<T> type) {
-		return type.getName().startsWith("java.") && Modifier.isFinal(type.getModifiers());
-	}
+    private static <T> boolean isFinalJavaSystemClass(Class<T> type) {
+        return type.getName().startsWith("java.") && Modifier.isFinal(type.getModifiers());
+    }
 
-	private static <T> MockData<T> createMethodInvocationControl(final String mockName, Class<T> type,
-			Method[] methods, boolean isSpy, Object delegator, MockSettings mockSettings) {
-		final MockSettingsImpl settings;
-		if (mockSettings == null) {
-			settings = (MockSettingsImpl) Mockito.withSettings();
-		} else {
-			settings = (MockSettingsImpl) mockSettings;
-		}
+    private static <T> MockData<T> createMethodInvocationControl(final String mockName, Class<T> type,
+                                                                 Method[] methods, boolean isSpy, Object delegator, MockSettings mockSettings) {
+        final MockSettingsImpl settings;
+        if (mockSettings == null) {
+            settings = (MockSettingsImpl) Mockito.withSettings();
+        } else {
+            settings = (MockSettingsImpl) mockSettings;
+        }
 
-		if (isSpy) {
-			settings.defaultAnswer(Mockito.CALLS_REAL_METHODS);
-		}
+        if (isSpy) {
+            settings.defaultAnswer(Mockito.CALLS_REAL_METHODS);
+        }
 
-		settings.initiateMockName(type);
-		MockHandler<T> mockHandler = new MockHandler<T>(settings);
-		MethodInterceptorFilter filter = new MethodInterceptorFilter(mockHandler, settings);
-		final T mock = (T) ClassImposterizer.INSTANCE.imposterise(filter, type);
-		final MockitoMethodInvocationControl invocationControl = new MockitoMethodInvocationControl(filter,
+        settings.initiateMockName(type);
+        MockHandler<T> mockHandler = new MockHandler<T>(settings);
+        MethodInterceptorFilter filter = new MethodInterceptorFilter(mockHandler, settings);
+        final T mock = (T) ClassImposterizer.INSTANCE.imposterise(filter, type);
+        final MockitoMethodInvocationControl invocationControl = new MockitoMethodInvocationControl(filter,
                 isSpy && delegator == null ? new Object() : delegator, mock, methods);
 
-		return new MockData<T>(invocationControl, mock);
-	}
+        return new MockData<T>(invocationControl, mock);
+    }
 
-	private static String toInstanceName(Class<?> clazz) {
-		String className = clazz.getSimpleName();
-		if (className.length() == 0) {
-			return clazz.getName();
-		}
-		// lower case first letter
-		return className.substring(0, 1).toLowerCase() + className.substring(1);
-	}
+    private static String toInstanceName(Class<?> clazz) {
+        String className = clazz.getSimpleName();
+        if (className.length() == 0) {
+            return clazz.getName();
+        }
+        // lower case first letter
+        return className.substring(0, 1).toLowerCase() + className.substring(1);
+    }
 
-	/**
-	 * Class that encapsulate a mock and its corresponding invocation control.
-	 */
-	private static class MockData<T> {
-		private final MockitoMethodInvocationControl methodInvocationControl;
+    /**
+     * Class that encapsulate a mock and its corresponding invocation control.
+     */
+    private static class MockData<T> {
+        private final MockitoMethodInvocationControl methodInvocationControl;
 
-		private final T mock;
+        private final T mock;
 
-		MockData(MockitoMethodInvocationControl methodInvocationControl, T mock) {
-			this.methodInvocationControl = methodInvocationControl;
-			this.mock = mock;
-		}
+        MockData(MockitoMethodInvocationControl methodInvocationControl, T mock) {
+            this.methodInvocationControl = methodInvocationControl;
+            this.mock = mock;
+        }
 
-		public MockitoMethodInvocationControl getMethodInvocationControl() {
-			return methodInvocationControl;
-		}
+        public MockitoMethodInvocationControl getMethodInvocationControl() {
+            return methodInvocationControl;
+        }
 
-		public T getMock() {
-			return mock;
-		}
-	}
+        public T getMock() {
+            return mock;
+        }
+    }
 
     /**
      * Clear state in Mockito that retains memory between tests
@@ -154,7 +154,12 @@ public class MockCreator {
 
         private void clearThreadLocalIn(Class<?> cls) {
             Whitebox.getInternalState(cls, ThreadLocal.class).set(null);
-            final Class<?> clazz = ClassLoaderUtil.loadClass(cls, ClassLoader.getSystemClassLoader());
+            final Class<?> clazz;
+            if(ClassLoaderUtil.hasClass(cls, ClassLoader.getSystemClassLoader())) {
+                clazz = ClassLoaderUtil.loadClass(cls, ClassLoader.getSystemClassLoader());
+            } else {
+                clazz = ClassLoaderUtil.loadClass(cls, cls.getClassLoader());
+            }
             Whitebox.getInternalState(clazz, ThreadLocal.class).set(null);
         }
     }
